--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.3"]
+date = Sun Sep 18 04:06:44 PM EDT 2022
+done = Add -e to echo ansi codes
+
 [version "0.1.2"]
 date = Sun Sep 18 03:27:22 PM EDT 2022
 done = Make lib/bashplus.bash be not executable
