--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.4"]
+date = Sun Sep 18 04:51:06 PM EDT 2022
+done = Add +assert-... functions to bashplus
+
 [version "0.1.3"]
 date = Sun Sep 18 04:06:44 PM EDT 2022
 done = Add -e to echo ansi codes
