--- a/man/man3/bashplus.3
+++ b/man/man3/bashplus.3
@@ -155,6 +155,14 @@ The bashplus library defines dozens of useful Bash functions to make Bash progra
 .SS "\s-1FUNCTIONS\s0"
 .IX Subsection "FUNCTIONS"
 .IP "\(bu" 4
+\&\f(CW\*(C`+assert\-cmd <name\*(C'\fR>
+.IP "\(bu" 4
+\&\f(CW\*(C`+assert\-cmd\-ver <name\*(C'\fR <version>>
+.IP "\(bu" 4
+\&\f(CW\*(C`+assert\-perl [<perl\-version\*(C'\fR]>
+.IP "\(bu" 4
+\&\f(CW\*(C`+assert\-sed [<sed\-version\*(C'\fR]>
+.IP "\(bu" 4
 \&\f(CW\*(C`+can <name\*(C'\fR>
 .IP "\(bu" 4
 \&\f(CW\*(C`die <msg\*(C'\fR>
