--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.5"]
+date = Mon Sep 19 10:17:29 AM EDT 2022
+done = Don't die in +is-cmd-ver
+
 [version "0.1.4"]
 date = Sun Sep 18 04:51:06 PM EDT 2022
 done = Add +assert-... functions to bashplus
