--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+[version "0.1.8"]
+date = Sat Sep 24 10:07:44 AM EDT 2022
+done = Update BPAN files
+done = Turn off -x debugging in `die` function
+
 [version "0.1.7"]
 date = Fri Sep 23 12:53:59 PM EDT 2022
 done = Refactor to new config schema
