--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.9"]
+date = Sat Sep 24 01:44:15 PM EDT 2022
+done = Added functions +2:1 +2:x +=:x
+
 [version "0.1.8"]
 date = Sat Sep 24 10:07:44 AM EDT 2022
 done = Update BPAN files
