--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.11"]
+date = Sat Sep 24 02:14:24 PM EDT 2022
+done = Add comments to library
+
 [version "0.1.10"]
 date = Sat Sep 24 01:50:05 PM EDT 2022
 done = Added comments
