--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.13"]
+date = Sat Sep 24 03:18:20 PM EDT 2022
+done = Removed a blank line for testing release
+
 [version "0.1.12"]
 date = Sat Sep 24 03:06:12 PM EDT 2022
 done = Added a blank line
