--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.17"]
+date = Sat Sep 24 16:23:18 EDT 2022
+done = Dummy commit to test release
+
 [version "0.1.16"]
 date = Sat Sep 24 16:20:52 EDT 2022
 done = Dummy commit to test release
