--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.18"]
+date = Sun Sep 25 12:34:56 PM EDT 2022
+done = BPAN update
+
 [version "0.1.17"]
 date = Sat Sep 24 16:23:18 EDT 2022
 done = Dummy commit to test release
