--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+[version "0.1.24"]
+date = Sat Oct  1 02:04:37 PM PDT 2022
+done = Add +dirname and +dirpath
+done = Version 0.1.23
+
 [version "0.1.23"]
 date = Fri Sep 30 12:56:05 PM PDT 2022
 done = Change 'update.template' to 'update.file' in config
