--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.25"]
+date = Sun Oct  2 06:14:47 PM PDT 2022
+done = Add +mtime and +time
+
 [version "0.1.24"]
 date = Sat Oct  1 02:04:37 PM PDT 2022
 done = Add +dirname and +dirpath
