--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.26"]
+date = Sun Oct  2 06:16:04 PM PDT 2022
+
+
 [version "0.1.25"]
 date = Sun Oct  2 06:14:47 PM PDT 2022
 done = Add +mtime and +time
