--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.27"]
+date = Wed Oct  5 09:39:31 AM PDT 2022
+done = Fix +mtime on macos
+
 [version "0.1.26"]
 date = Sun Oct  2 06:16:04 PM PDT 2022
 
