--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.28"]
+date = Wed Oct  5 07:58:51 PM PDT 2022
+done = Fix .bpan/config symlink
+
 [version "0.1.27"]
 date = Wed Oct  5 09:39:31 AM PDT 2022
 done = Fix +mtime on macos
