--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.30"]
+date = Sat Oct 15 05:59:01 PM PDT 2022
+done = Fix whether to print line # for die message
+
 [version "0.1.29"]
 date = Thu Oct 13 09:16:41 AM PDT 2022
 done = Newline one last die msg line disables line #
