--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.33"]
+date = Sat Oct 29 01:35:47 PM PDT 2022
+done = Improve +timer* functions
+
 [version "0.1.32"]
 date = Sat Oct 29 12:02:46 PM PDT 2022
 done = Add timer functions
