--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.34"]
+date = Sat Oct 29 03:47:29 PM PDT 2022
+done = Fix some bugs in +timer-wrap
+
 [version "0.1.33"]
 date = Sat Oct 29 01:35:47 PM PDT 2022
 done = Improve +timer* functions
