--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.35"]
+date = Sat Oct 29 03:48:09 PM PDT 2022
+done = Renumber tests
+
 [version "0.1.34"]
 date = Sat Oct 29 03:47:29 PM PDT 2022
 done = Fix some bugs in +timer-wrap
