--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.38"]
+date = Sun Oct 30 10:58:51 AM PDT 2022
+done = Fixes and refactoring
+
 [version "0.1.37"]
 date = Sun Oct 30 09:51:25 AM PDT 2022
 done = Break up bashplus into smaller sub libraries
