--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.39"]
+date = Sun Oct 30 11:32:31 AM PDT 2022
+done = Small fixes
+
 [version "0.1.38"]
 date = Sun Oct 30 10:58:51 AM PDT 2022
 done = Fixes and refactoring
