--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.40"]
+date = Sun Oct 30 11:48:55 AM PDT 2022
+done = Another refactoring bug fix
+
 [version "0.1.39"]
 date = Sun Oct 30 11:32:31 AM PDT 2022
 done = Small fixes
