--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.42"]
+date = Sun Oct 30 01:13:23 PM PDT 2022
+done = Fix bugs in 'error' function from refactor
+
 [version "0.1.41"]
 date = Sun Oct 30 12:56:01 PM PDT 2022
 done = A couple more refactoring bugs fixed
