--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.44"]
+date = Wed Nov  2 11:04:10 AM PDT 2022
+done = Simplfy +source
+
 [version "0.1.43"]
 date = Sun Oct 30 01:25:20 PM PDT 2022
 done = Fix a wording bug in the 'error' function
