--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.45"]
+date = Wed Nov  2 03:01:23 PM PDT 2022
+done = Implement +stack-trace and use in die and error
+
 [version "0.1.44"]
 date = Wed Nov  2 11:04:10 AM PDT 2022
 done = Simplfy +source
