--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+[version "0.1.47"]
+date = Wed Nov  9 10:03:54 AM PST 2022
+done = Add +time:ymd for yyyy-mm-dd date string
+done = Syntax tweak
+
 [version "0.1.46"]
 date = Sun Nov  6 11:33:43 AM PST 2022
 done = Support BASHPLUS_DEBUG_BASH_X
