--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.49"]
+date = Fri Nov 11 06:18:11 AM PST 2022
+done = Finish fun -> func refactor
+
 [version "0.1.48"]
 date = Fri Nov 11 05:52:08 AM PST 2022
 done = Add a +time:stamp function
