--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.52"]
+date = Thu Nov 17 09:46:18 PM PST 2022
+done = Allow optional 2nd arg 'remote' for +git:tag-pushed
+
 [version "0.1.51"]
 date = Fri Nov 11 10:07:03 AM PST 2022
 done = Change source bashplus --foo to +foo
