--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+[version "0.1.56"]
+date = Sat Nov 19 10:53:26 AM PST 2022
+done = Add +str:repeat
+done = Move Meta file to .bpan/config
+
 [version "0.1.55"]
 date = Sat Nov 19 09:07:12 AM PST 2022
 done = Add str.bash
