--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.59"]
+date = Mon Dec  5 12:48:48 PM PST 2022
+done = Fix config
+
 [version "0.1.58"]
 date = Mon Dec  5 10:49:25 AM PST 2022
 done = Change package.repo to package.owner
