--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+[version "0.1.61"]
+date = Sun Dec 11 05:38:56 PM PST 2022
+done = Config changes
+
 [version "0.1.60"]
 date = Thu Dec  8 05:50:09 PM PST 2022
 done = Change config to '[author "github:ingydotnet"]'
